test/checks/gatewayAllowedRoutesAll/failure.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: unrestricted
spec:
  gatewayClassName: kgateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
